// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quiz should render the quiz details, 'READY' status and questions for '/viewQuiz' url 1`] = `
<div
  id="quiz"
>
  <div
    className="spacing"
    id="notification"
  />
  <div
    id="quizTitle"
  >
    test
  </div>
  <div
    className="quizStatus"
  >
    Status: 
    <span
      className="readyFlag"
    >
      <i
        className="far fa-check-circle"
      />
       Ready for use
    </span>
  </div>
  <div>
    Description:
  </div>
  <div>
    test
  </div>
  <div
    className="headerContainer"
  >
    <div
      id="questionsTitle"
    >
      Questions
    </div>
  </div>
  <div
    id="questionHeadings"
  >
    <div
      id="questionNumberHeader"
    >
      Answer
    </div>
    <div
      id="questionDescriptionHeader"
    >
      Description
    </div>
    <div
      id="questionOptionsHeader"
    />
  </div>
  <div>
    <div>
      <div
        className="questionContainer"
      >
        <div
          className="questionNumber"
        >
          1
        </div>
        <div
          className="questionDescription"
        >
          test
        </div>
        <div
          className="options"
        />
      </div>
    </div>
    <div>
      <div
        className="questionContainer"
      >
        <div
          className="questionNumber"
        >
          2
        </div>
        <div
          className="questionDescription"
        >
          test2
        </div>
        <div
          className="options"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Quiz should render the quiz form, 'DRAFT' status and questions for '/editQuiz' url 1`] = `
<div
  id="quiz"
>
  <div
    className="spacing"
    id="notification"
  />
  <div
    id="quizTitle"
  >
    Edit the test quiz
  </div>
  <div
    className="quizStatus"
  >
    Status: 
    <span
      className="readyFlag"
    >
      <i
        className="far fa-check-circle"
      />
       Ready for use
    </span>
  </div>
  <div>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label>
          Quiz name:
        </label>
        <input
          className="inputBox"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          placeholder="test"
          value=""
        />
      </div>
      <div>
        <label>
          Quiz description:
        </label>
        <input
          className="inputBox"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          placeholder="test"
          value=""
        />
      </div>
      <div>
        <label>
          Quiz category:
        </label>
        <select
          className="inputBox"
          name="category"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          value=""
        >
          <option
            value="Cat1"
          >
            Cat1
          </option>
          <option
            value="Cat2"
          >
            Cat2
          </option>
          <option
            value="Cat3"
          >
            Cat3
          </option>
        </select>
      </div>
      <div>
        <button
          className="submit"
        >
          Save
        </button>
        <a
          className="cancel"
          href="/quizSearch"
          onClick={[Function]}
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
  <div>
    <button
      className="delete"
      data-testid="delete-quiz-button"
      onClick={[Function]}
    >
      <i
        className="fas fa-trash-alt"
      />
       Delete
    </button>
    <button
      className="warningButton"
      data-testid="updateStatus-button"
      onClick={[Function]}
    >
      <i
        className="fas fa-pencil-ruler"
      />
       Revert to draft
    </button>
  </div>
  <div
    className="headerContainer"
  >
    <div
      id="questionsTitle"
    >
      Questions
    </div>
    <a
      className="add addButton"
      href="/newQuestion"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus-circle green"
      />
       Add a question
    </a>
  </div>
  <div
    id="questionHeadings"
  >
    <div
      id="questionNumberHeader"
    >
      Answer
    </div>
    <div
      id="questionDescriptionHeader"
    >
      Description
    </div>
    <div
      id="questionOptionsHeader"
    />
  </div>
  <div>
    <div>
      <div
        className="questionContainer"
      >
        <div
          className="questionNumber"
        >
          1
        </div>
        <div
          className="questionDescription"
        >
          test
        </div>
        <div
          className="options"
        >
          <a
            className="edit"
            href="/editQuestion"
            onClick={[Function]}
          >
            <i
              className="fas fa-edit blue"
            />
             Edit
          </a>
          <a
            className="deleteOption"
            href="/editQuiz"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt red"
            />
             Delete
          </a>
        </div>
      </div>
    </div>
    <div>
      <div
        className="questionContainer"
      >
        <div
          className="questionNumber"
        >
          2
        </div>
        <div
          className="questionDescription"
        >
          test2
        </div>
        <div
          className="options"
        >
          <a
            className="edit"
            href="/editQuestion"
            onClick={[Function]}
          >
            <i
              className="fas fa-edit blue"
            />
             Edit
          </a>
          <a
            className="deleteOption"
            href="/editQuiz"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt red"
            />
             Delete
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
